update mjr if is batch result